--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,24 @@
 title: Mioclonos
+author: Joan Navarrete
+name: Joan Navarrete
 email: joan.navarrete.sanchez@gmail.com
+
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal site for Joan Navarrete Sanchez
+  A simple personal website.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://joannavarrete.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+
 twitter_username: joannava
 github_username:  joannavarrete
+linkedin_username: joan-navarrete
 
 # Build settings
 theme: minima
+
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 markdown: GFM
 highlighter: rouge
