--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,27 @@
-title: Mioclonos
-author: Joan Navarrete
-name: Joan Navarrete
-email: joan.navarrete.sanchez@gmail.com
+# Setup
+title:               Mioclonos
+tagline:             'A Jekyll theme'
+description:         'A simple personal website'
+url:                 https://joannavarrete.github.io/
+baseurl:             ''
+paginate:            5
+permalink:           pretty
 
-description: >- # this means to ignore newlines until "baseurl:"
-  A simple personal website.
+# About/contact
+author:
+  name:              Joan Navarrete Sanchez
+  url:               https://twitter.com/joannava
+  email:             joan.navarrete.sanchez@gmai.com
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://joannavarrete.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-
-twitter_username: joannava
-github_username:  joannavarrete
-linkedin_username: joan-navarrete
-
-# Build settings
-theme: minima
-
+# Gems
 plugins:
+  - jekyll-paginate
   - jekyll-feed
   - jekyll-seo-tag
+
+# Custom vars
+version:             1.1.0
+google_analytics_id: #UA-XXXX-Y
 
 markdown: GFM
 highlighter: rouge
