--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:               Mioclonos
-tagline:             'A Jekyll theme'
+tagline:             ''
 description:         'A simple personal website'
 url:                 https://joannavarrete.github.io/
 baseurl:             ''
